create github pages

--- a/page6.html
+++ b/page6.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="cid-ro27skqOVE mbr-fullscreen mbr-parallax-background" id="header2-u">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="cid-ro27skqOVE mbr-fullscreen mbr-parallax-background" id="header2-u">
 
     
 
