--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-rn6Kcz3Bpf mbr-parallax-background" id="header1-s">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="header1 cid-rn6Kcz3Bpf mbr-parallax-background" id="header1-s">
 
     
 
@@ -272,7 +272,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-3">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/65691098-c39b-4d25-a010-f65e08321be7-sylvia-atencio-900x1350.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/65691098-c39b-4d25-a010-f65e08321be7-sylvia-atencio-480x720.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
