--- a/page2.html
+++ b/page2.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section contacts3 cid-ro1NJ8JXke" id="contacts3-g">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section contacts3 cid-ro1NJ8JXke" id="contacts3-g">
     <!---->
     
     <!---->
